--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <section class="top-area">
         <div id="header-text-area" class="half-width">
-            <h2>Hello I'm</h2>
-            <h1>FarhaN Academy</h1>
+            <h2>Hello! Welcome To</h2>
+            <h1><span>FarhaN</span> Academy</h1>
             <p style="text-align: justify;">You might saw me jumping, climbing building, and stopping trains. But nobody pays me a dime for that work.</p>
             <a target="_blank" class="anchor-btn" href="https://www.facebook.com/sagorahmedfarhan11"><i class="fa-solid fa-paperclip"></i> Hire Me</a>
         </div>
